// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button ButtonGroup 1`] = `
<div
  className="sc-EHOje eyUsub"
>
  <div>
    <h1>
      ButtonGroups
    </h1>
    <h3>
      One Button
    </h3>
    <div
      className="sc-dymIpo dlirEH sc-cpmLhU dpVsHD"
      is={null}
    >
      <button
        className="sc-emmjRN fiAUlT sc-eerKOB caPADH"
        disabled={false}
        is={null}
        modeSpecs={
          Object {
            "bg": "greyScale.4",
            "color": null,
            "focusBg": "greyScale.3",
          }
        }
      >
        Click!
        
      </button>
    </div>
    <h3>
      Two Buttons
    </h3>
    <div
      className="sc-dymIpo dlirEH sc-cpmLhU dpVsHD"
      is={null}
    >
      <button
        className="sc-emmjRN fiAUlT sc-eerKOB caPADH"
        disabled={false}
        is={null}
        modeSpecs={
          Object {
            "bg": "greyScale.4",
            "color": null,
            "focusBg": "greyScale.3",
          }
        }
      >
        Click!
        
      </button>
      <button
        className="sc-emmjRN fiAUlT sc-eerKOB caPADH"
        disabled={false}
        is={null}
        modeSpecs={
          Object {
            "bg": "greyScale.4",
            "color": null,
            "focusBg": "greyScale.3",
          }
        }
      >
        Click!
        
      </button>
    </div>
    <h3>
      Three Buttons
    </h3>
    <div
      className="sc-dymIpo dlirEH sc-cpmLhU dpVsHD"
      is={null}
    >
      <button
        className="sc-emmjRN fiAUlT sc-eerKOB caPADH"
        disabled={false}
        is={null}
        modeSpecs={
          Object {
            "bg": "greyScale.4",
            "color": null,
            "focusBg": "greyScale.3",
          }
        }
      >
        Click!
        
      </button>
      <button
        className="sc-emmjRN fiAUlT sc-eerKOB caPADH"
        disabled={false}
        is={null}
        modeSpecs={
          Object {
            "bg": "greyScale.4",
            "color": null,
            "focusBg": "greyScale.3",
          }
        }
      >
        Click!
        
      </button>
      <button
        className="sc-emmjRN fiAUlT sc-eerKOB caPADH"
        disabled={false}
        is={null}
        modeSpecs={
          Object {
            "bg": "greyScale.4",
            "color": null,
            "focusBg": "greyScale.3",
          }
        }
      >
        Click!
        
      </button>
    </div>
    <h3>
      Mix of Buttons and ButtonLinks
    </h3>
    <div
      className="sc-dymIpo dlirEH sc-cpmLhU dpVsHD"
      is={null}
    >
      <button
        className="sc-emmjRN fiAUlT sc-eerKOB caPADH"
        disabled={false}
        is={null}
        modeSpecs={
          Object {
            "bg": "greyScale.4",
            "color": null,
            "focusBg": "greyScale.3",
          }
        }
      >
        Click!
        
      </button>
      <a
        className="sc-gFaPwZ kuwaEM sc-bnXvFD iWiaxa"
        is={null}
      >
        Click!
      </a>
      <button
        className="sc-emmjRN fiAUlT sc-eerKOB caPADH"
        disabled={false}
        is={null}
        modeSpecs={
          Object {
            "bg": "greyScale.4",
            "color": null,
            "focusBg": "greyScale.3",
          }
        }
      >
        Click!
        
      </button>
      <a
        className="sc-gFaPwZ kuwaEM sc-bnXvFD iWiaxa"
        is={null}
      >
        Click!
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button ButtonLink 1`] = `
<div
  className="sc-EHOje eyUsub"
>
  <div>
    <h1>
      ButtonLink
    </h1>
    <p>
      ButtonLink is a link that looks like a button
    </p>
    <h3>
      Link to URL
    </h3>
    <a
      className="sc-gFaPwZ kuwaEM sc-bnXvFD iWiaxa"
      is={null}
      to="/some/url"
    >
      Go to some URL
    </a>
    <pre>
      &lt;ButtonLink to="/some/url"&gt;Go to some URL&lt;/ButtonLink&gt;
    </pre>
    <h3>
      Link to a react-router route
    </h3>
    <pre>
      &lt;ButtonLink is={Link} to="/some/:id"&gt;Go to some route&lt;/ButtonLink&gt;
    </pre>
  </div>
</div>
`;

exports[`Storyshots Button Primary disabled and normal states 1`] = `
<div
  className="sc-EHOje eyUsub"
>
  <div>
    <h1>
      Basic Buttons 
    </h1>
    <h3>
      Primary Button
    </h3>
    <button
      className="sc-emmjRN fiAUlT sc-eerKOB coIolz"
      disabled={false}
      is={null}
      modeSpecs={
        Object {
          "bg": "greyScale.4",
          "color": null,
          "focusBg": "greyScale.3",
        }
      }
      onClick={[Function]}
    >
      <i>
        Click Me !
      </i>
      
    </button>
    <h3>
      Disabled Button
    </h3>
    <button
      className="sc-emmjRN fiAUlT sc-eerKOB caPADH"
      disabled={true}
      is={null}
      modeSpecs={
        Object {
          "bg": "greyScale.4",
          "color": null,
          "focusBg": "greyScale.3",
        }
      }
      onClick={[Function]}
    >
      Can't touch this
      
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Show progress indicator 1`] = `
<div
  className="sc-EHOje eyUsub"
>
  <div>
    <h1>
      Progress Indicator
    </h1>
    <button
      className="sc-emmjRN fiAUlT sc-eerKOB caPADH"
      disabled={false}
      is={null}
      modeSpecs={
        Object {
          "bg": "greyScale.4",
          "color": null,
          "focusBg": "greyScale.3",
        }
      }
      onClick={[Function]}
    >
      Click me
      
    </button>
  </div>
</div>
`;

exports[`Storyshots Checkbox Disabled State 1`] = `
<div
  className="sc-EHOje eyUsub"
>
  <input
    checked={undefined}
    className="Checkbox__StyledCheckbox-cicolx hBIJab"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Storyshots Checkbox default 1`] = `
<div
  className="sc-EHOje eyUsub"
>
  <input
    checked={undefined}
    className="Checkbox__StyledCheckbox-cicolx hBIJab"
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Storyshots Form simple redux form 1`] = `
<div
  className="sc-EHOje eyUsub"
>
  <div>
    <p>
      Forms should be used for any data input.
    </p>
    <div>
      <h2>
        Create new user
      </h2>
      <form
        onSubmit={[Function]}
      >
        <div>
          <input
            autoFocus={true}
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Username"
            required={true}
            type="text"
            value=""
          />
        </div>
        <div>
          <input
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Email"
            required={true}
            type="email"
            value=""
          />
        </div>
        <input
          type="submit"
          value="create"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form with graphql 1`] = `
<div
  className="sc-EHOje eyUsub"
>
  <div>
    <p>
      Forms should be used for any data input.
    </p>
    <div>
      <h2>
        Create new user
      </h2>
      <div>
        Example of loading data with graphql:
        <br />
        Employee count: 
        ...
      </div>
      <form
        onSubmit={[Function]}
      >
        <div>
          <input
            autoFocus={true}
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Username"
            required={true}
            type="text"
            value=""
          />
        </div>
        <div>
          <input
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Email"
            required={true}
            type="email"
            value=""
          />
        </div>
        <input
          type="submit"
          value="create"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input with value 1`] = `
<div
  className="sc-EHOje eyUsub"
>
  <input
    className="Input__StyledInput-gzbIwR gUBVIb"
    onChange={[Function]}
    type="text"
    value="Airat"
  />
</div>
`;
